--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="description" content="155 characters of call to action">
-  <title>PAGE TITLE HERE</title>
-  <script type="text/javascript" src="main.js"></script>
-</head>
-
-<body>
-  <!-- WEB PAGE CONTENT HERE -->
-</body>
-</html>
-
+<!doctype html><html lang="en"><head>  <meta charset="UTF-8">  <meta name="description" content="155 characters of call to action">  <title>JS Exercises - Week 1</title>  <script type="text/javascript" src="main.js"></script></head><body><h1>JS Exercises</h1><p>Make sure you check the console for your code.</p><h3>Google Chrome</h3><ul>    <li>Mac: <strong>Command + Option + J</strong></li>    <li>Win: <strong>Control + Shift + J</strong> </li></ul><p>&nbsp;</p>    </body></html>
